--- a/index.html
+++ b/index.html
@@ -9,9 +9,30 @@
 </head>
 
 <body>
-    <div class="flex flex-col justify-center items-center h-screen bg-gray-800 space-y-4">
-        <h1 class="text-4xl font-bold text-white">Chess</h1>
-        <div class="grid grid-cols-8 gap-0" id="board"></div>
+    <div class="flex flex-col justify-center items-center h-screen bg-gray-800 space-y-2">
+        <div>
+            <!-- <div class="flex justify-between items-center border border-white mb-2 px-2 w-full h-12 bg-[#EBECD0]">
+                <div id="white-pieces-capture">pieces</div>
+                <div id="white-buttons-controls" class="grid grid-cols-4 gap-2">
+                    <div class="w-10 h-10 bg-indigo-400 grid place-items-center">1</div>
+                    <div class="w-10 h-10 bg-indigo-400 grid place-items-center">2</div>
+                    <div class="w-10 h-10 bg-indigo-400 grid place-items-center">3</div>
+                    <div class="w-10 h-10 bg-indigo-400 grid place-items-center">4</div>
+                </div>
+            </div> -->
+
+            <div class="grid grid-cols-8 gap-0" id="board"></div>
+
+            <!-- <div class="flex justify-between items-center border border-white mt-2 px-2 w-full h-12 bg-[#EBECD0]">
+                <div id="bleack-pieces-capture">pieces</div>
+                <div id="bleack-buttons-controls" class="grid grid-cols-4 gap-2">
+                    <div class="w-10 h-10 bg-indigo-400 grid place-items-center">1</div>
+                    <div class="w-10 h-10 bg-indigo-400 grid place-items-center">2</div>
+                    <div class="w-10 h-10 bg-indigo-400 grid place-items-center">3</div>
+                    <div class="w-10 h-10 bg-indigo-400 grid place-items-center">4</div>
+                </div>
+            </div> -->
+        </div>
     </div>
 
     <script src="./script.js"></script>
