--- a/index.html
+++ b/index.html
@@ -9,10 +9,22 @@
 </head>
 
 <body>
-    <div class="flex flex-col justify-center items-center h-screen bg-gray-800 space-y-2">
-        <div class="w-full max-w-[90vmin] aspect-square">
+    <div class="flex flex-col justify-center items-center h-screen bg-gray-800 space-y-4">
+        
+        <div class="flex flex-col juctify-center items-center text-white text-base font-semibold">
+            <h1>🔄 Turno do jogador</h1>
+            <span id="turno"></span>
+        </div>
+
+        <div class="w-full max-w-[80vmin] aspect-square">
             <div class="grid grid-cols-8 grid-rows-8 w-full h-full" id="board"></div>
         </div>
+
+        <button 
+            id="restart-button" 
+            class="bg-white hover:bg-white/80 text-sm text-gray-800 font-bold px-4 py-2 hover:duration-300 rounded shadow">
+            ♻️ Reiniciar Jogo
+        </button>
     </div>
 
     <!-- Backdrop -->
@@ -31,7 +43,6 @@
             </div>
         </div>
     </div>
-
 
     <script src="./script.js"></script>
 </body>
