--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="./script-v2.js"></script>
 </body>
 
 </html>
